# RayTracer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Intersection.cpp  Intersection.h  Light.cpp  Light.h  PixelBuffer.cpp  PixelBuffer.h  Point.h  README  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Vector3.cpp  Vector3.h  hw5  main.cpp
Objects/: Object.cpp  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
